--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-requests~=2.31.0
-schedule~=1.2.1
-json2html~=1.3.0
-bs4~=0.0.1
-beautifulsoup4~=4.12.2
-pyTelegramBotAPI~=4.14.0
+requests==2.31.0
+schedule==1.2.1
+json2html==1.3.0
+bs4==0.0.1
+beautifulsoup4==4.12.2
+pyTelegramBotAPI==4.14.0
